# cookiecutter-python

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
