[tool.poetry]
name = "{{cookiecutter.project_name_snake_case}}"
version = "0.1.0"
description = ""
authors = ["grumbling-tom <thomas-stokes@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
pylint = "^2.15.8"
isort = "^5.10.1"
pytest = "^7.2.0"
mypy = "^0.991"
jupyterlab = "^3.5.1"
commitizen = "^2.38.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "$version"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
